# cmake-cpp-project-template

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake  clang-tidy.cmake  cppcheck.cmake  iwyu.cmake
scripts/: analyze  build  test
src/: CMakeLists.txt  lib.cpp  lib.hpp
tests/: CMakeLists.txt  main.cpp  tst_lib.hpp
